// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Stack passes the snapshot test for horizontal direction 1`] = `
<View
  direction="horizontal"
  divider={<Divider />}
  onLayout={[Function]}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 100,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginLeft": 24,
          },
          Object {
            "height": "100%",
            "width": 1,
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for vertical direction 1`] = `
<View
  direction="vertical"
  divider={<Divider />}
  onLayout={[Function]}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "marginTop": 24,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 100,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": "40%",
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E4E9F2",
            "display": "flex",
            "marginTop": 24,
          },
          Object {
            "height": 1,
            "width": "100%",
          },
        ]
      }
    />
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "borderRadius": undefined,
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "borderRadius": undefined,
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;
